Avoided several deprecation warnings with Java 9+